--- a/srcs/requirements/nginx/conf/https.conf
+++ b/srcs/requirements/nginx/conf/https.conf
@@ -1,6 +1,7 @@
 server {
     #listen to port  443
     listen 443 ssl;
+    listen [::]:443 ssl;
 
     #set server name
     server_name aanouari.42.fr;
