--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -7,6 +7,8 @@ group = www-data
 ; The address on which to accept FastCGI requests.
 listen = 0.0.0.0:9000
 
+chdir = /var/www/html/wordpress
+
 ; Choose how the process manager will control the number of child processes.
 pm = dynamic
 pm.max_children = 25
