--- a/srcs/.env
+++ b/srcs/.env
@@ -9,3 +9,12 @@ MYSQL_DATABASE=WordpressDB
 MYSQL_ROOT_PASSWORD=1234
 MYSQL_USER=anouari
 MYSQL_PASSWORD=1234
+MYSQL_HOST=mariadb-42
+
+#mywordpress setup
+WP_ADMIN=admin
+WP_ADMIN_PASSWORD=1234
+WP_ADMIN_EMAIL=admin@gmail.com
+WP_URL=https://aanouari.42.fr
+WP_TITLE=MyWordpress
+WP_TABLE=table_prefix
