--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     networks:
       - inception
     volumes:
-      - wordpress:/var/www/html
+      - wordpress:/var/www/html/
     restart: always
     depends_on:
       - mariadb
@@ -52,7 +52,7 @@ services:
     networks:
       - inception
     volumes:
-      - ./requirements/nginx
+      - wordpress:/var/www/html/
     ports:
       - "443:443"
     restart: always
@@ -64,11 +64,18 @@ services:
 #Volumes
 volumes:
   mariadb:
-    name: mariadb
-    external: true
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/aanouari/mariadb
+      o: bind
   wordpress:
-    name: wordpress
-    external: true
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/aanouari/wordpress
+      o: bind
+
 
 #Networks
 networks:
