--- a/srcs/.env
+++ b/srcs/.env
@@ -6,10 +6,9 @@ CERTS_CRT=/etc/ssl/certs/nginx-selfsigned.crt
 
 #mysql setup
 MYSQL_DATABASE=WordpressDB
-MYSQL_ROOT_PASSWORD=1234
-MYSQL_USER=anouari
+MYSQL_ROOT_PASSWORD=1234root
+MYSQL_USER=aanouari
 MYSQL_PASSWORD=1234
-MYSQL_HOST=mariadb-42
 
 #mywordpress setup
 WP_ADMIN=admin
