--- a/srcs/requirements/mariadb/conf/mariadb.cnf
+++ b/srcs/requirements/mariadb/conf/mariadb.cnf
@@ -3,5 +3,5 @@ user = root
 port = 3306
 datadir = /var/lib/mysql
 socket = /var/run/mysqld/mysqld.sock
-skip-networking = false
+skip-networking = 0
 bind-address = 0.0.0.0
