--- a/srcs/.env
+++ b/srcs/.env
@@ -9,6 +9,7 @@ MYSQL_DATABASE=WordpressDB
 MYSQL_ROOT_PASSWORD=1234root
 MYSQL_USER=aanouari
 MYSQL_PASSWORD=1234
+MYSQL
 
 #mywordpress setup
 WP_ADMIN=admin
