--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: mariadb
     image: mariadb:42
     init: true
+    env_file:
+      - .env
     build:
       context: ./requirements/mariadb
       dockerfile: Dockerfile
@@ -24,6 +26,8 @@ services:
     container_name: wordpress
     image: wordpress:42
     init: true
+    env_file:
+      - .env
     build:
       context: ./requirements/wordpress
       dockerfile: Dockerfile
@@ -44,6 +48,8 @@ services:
     container_name: nginx
     image: nginx:42
     init: true
+    env_file:
+      - .env
     build:
       context: ./requirements/nginx
       dockerfile: Dockerfile
