--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -6,7 +6,6 @@ ARG         MYSQL_DATABASE
 ARG         MYSQL_USER
 ARG         MYSQL_PASSWORD
 ARG         MYSQL_ROOT_PASSWORD
-ARG         MYSQL_HOST
 
 #UPDATE AND UPGRADE PACKAGES
 RUN         apt -y update && apt -y upgrade
@@ -16,18 +15,19 @@ RUN         apt -y install mariadb-server mariadb-client
 # RUN         mkdir -p /var/lib/mysql /var/run/mysqld
 # RUN         chown -R mysql:mysql /var/lib/mysql /var/run/mysqld
 # RUN         chmod +x /var/run/mysqld
-COPY        ./tools/install.sh .
 
-#COPY THE MARIADB CONFIGURATION FILE
+#COPY THE MARIADB CONFIGURATION FILE AND dump.sql FILE
 COPY        ./conf/mariadb.cnf /etc/mysql/my.cnf
+RUN         chmod 640 /etc/mysql/my.cnf
+RUN         chown -R mysql:mysql /var/lib/mysql
 # RUN         chmod +x /etc/mysql/mariadb.conf.d/mariadb.cnf
-#COPY        ./conf/dump.sql /usr/local/bin/
 
-#EXECUTE MARIADB INSTALLATION SCRIPT
-RUN        chmod +x install.sh
+#EXECURE MARIADB INSTALLATION SCRIPT
+COPY        ./tools/install.sh /usr/local/bin/
+RUN         chmod +x /usr/local/bin/install.sh
 
 #EXPOSE PORT 3306
 EXPOSE      3306
 
 #START MARIADB
-ENTRYPOINT  [ "./install.sh" ]
+ENTRYPOINT  [ "./usr/local/bin/install.sh" ]
