--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -8,13 +8,13 @@ ARG         MYSQL_PASSWORD
 ARG         MYSQL_ROOT_PASSWORD
 
 #UPDATE AND UPGRADE PACKAGES
-RUN         apt-get -y update && apt upgrade
+RUN         apt -y update && apt -y upgrade
 RUN         apt-get -y install wget php7.4-fpm php7.4-mysql mariadb-client
 
 #CONFIGURE PHP TO COMMUNICATE WITH NGINX
-RUN         mv /etc/php/7.4/fpm/pool.d/www.conf /etc/php/7.4/fpm/pool.d/www.conf.default
-COPY        ./conf/www.conf /etc/php/7.4/fpm/pool.d/
-RUN         ln -s $(find /usr/sbin -name 'php-fpm*') /usr/bin/php-fpm
+# RUN         mv /etc/php/7.4/fpm/pool.d/www.conf /etc/php/7.4/fpm/pool.d/www.conf.default
+# COPY        ./conf/www.conf /etc/php/7.4/fpm/pool.d/www.conf
+# RUN         ln -s $(find /usr/sbin -name 'php-fpm*') /usr/bin/php-fpm
 
 #EXPOSE PORT 9000
 EXPOSE      9000
