--- a/srcs/.env
+++ b/srcs/.env
@@ -9,12 +9,14 @@ MYSQL_DATABASE=WordpressDB
 MYSQL_ROOT_PASSWORD=1234root
 MYSQL_USER=aanouari
 MYSQL_PASSWORD=1234
-MYSQL
 
 #mywordpress setup
-WP_ADMIN=admin
-WP_ADMIN_PASSWORD=1234
-WP_ADMIN_EMAIL=admin@gmail.com
-WP_URL=https://aanouari.42.fr
+WP_ADMIN=Abdellah
+WP_ADMIN_PASSWORD=AdminPass4242
+WP_ADMIN_EMAIL=userad@email.com
+WP_URL=aanouari.42.fr
 WP_TITLE=MyWordpress
 WP_TABLE=table_prefix
+WP_USER=test
+WP_EMAIL=test@email.com
+WP_PASSWORD=UserPass1337
