--- a/srcs/requirements/nginx/conf/https.conf
+++ b/srcs/requirements/nginx/conf/https.conf
@@ -23,7 +23,10 @@ server {
 
     #forwards PHP requests to FastCGI server
     location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
-        fastcgi_pass wordpress:9000;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		fastcgi_pass wordpress:9000;
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
     }
 }
