--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -11,10 +11,6 @@ ARG         MYSQL_ROOT_PASSWORD
 RUN         apt -y update && apt -y upgrade
 RUN         apt-get -y install wget php7.4-fpm php7.4-mysql mariadb-client
 
-#CONFIGURE PHP TO COMMUNICATE WITH NGINX
-# RUN         mv /etc/php/7.4/fpm/pool.d/www.conf /etc/php/7.4/fpm/pool.d/www.conf.default
-# COPY        ./conf/www.conf /etc/php/7.4/fpm/pool.d/www.conf
-# RUN         ln -s $(find /usr/sbin -name 'php-fpm*') /usr/bin/php-fpm
 
 #EXPOSE PORT 9000
 EXPOSE      9000
@@ -24,8 +20,8 @@ RUN         mkdir -p /run/php
 RUN         chmod 755 /run/php
 
 #EXECUTE WORDPRESS INSTALLATION SCRIPT
-COPY        ./tools/scrip.sh .
-RUN         chmod +x ./scrip.sh
+COPY        ./tools/install.sh .
+RUN         chmod +x ./install.sh
 
 #START PHP-FPM
-CMD  [ "./scrip.sh" ]
+CMD  [ "./install.sh" ]
