--- a/srcs/requirements/mariadb/conf/mariadb.cnf
+++ b/srcs/requirements/mariadb/conf/mariadb.cnf
@@ -1,15 +1,6 @@
 [mysqld]
-user=root
-datadir=/var/lib/mysql
-socket=/var/run/mysqld/mysqld.sock
-log-error=/var/log/mysql/error.log
-
-# Set the character set and collation
-character-set-server=utf8mb4
-collation-server=utf8mb4_unicode_ci
-
-# Set the bind address to allow remote connections (if needed)
-bind-address=0.0.0.0
-
-# Set the port for MySQL connections
-port=3306
+user = root
+socket = /var/run/mysqld/mysqld.sock
+port = 3306
+datadir = /var/lib/mysql
+bind_address = *
