--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -11,12 +11,12 @@ ARG         MYSQL_ROOT_PASSWORD
 RUN         apt -y update && apt -y upgrade
 RUN         apt -y install mariadb-server mariadb-client
 
-#COPY THE MARIADB CONFIGURATION FILE AND dump.sql FILE
+#COPY THE MARIADB CONFIGURATION FILE
 COPY        ./conf/mariadb.cnf /etc/mysql/my.cnf
 RUN         chmod 640 /etc/mysql/my.cnf
 RUN         chown -R mysql:mysql /var/lib/mysql
 
-#EXECURE MARIADB INSTALLATION SCRIPT
+#EXECUTE MARIADB INSTALLATION SCRIPT
 COPY        ./tools/install.sh /usr/local/bin/
 RUN         chmod +x /usr/local/bin/install.sh
 
